# zakatflow

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: CLAUDE.md  pyproject.toml
backend/app/: main.py
backend/app/api/: assets.py  auth.py  hawl.py  liabilities.py  nisab.py  notifications.py  plaid.py  profile.py  zakat.py
backend/app/core/: auth.py  config.py  plaid_client.py  supabase.py
backend/app/schemas/: assets.py  auth.py  liabilities.py  plaid.py  profile.py  zakat.py
backend/app/services/: calculation_engine.py  gold_price.py  hawl.py  notifications.py  plaid_service.py  plaid_sync.py
backend/tests/: test_calculation_engine.py  test_hawl.py  test_zakat.py
docs/: api-testing.md
docs/roles/: backend-1.md  backend-2.md  design.md  frontend-1.md  frontend-2.md  fullstack.md
frontend/: CLAUDE.md
frontend/mobile/: README.md  app.json  package-lock.json  package.json
frontend/mobile/.expo/: settings.json
frontend/mobile/.expo/prebuild/: cached-packages.json
frontend/mobile/.expo/types/: router.d.ts
frontend/mobile/app/: _layout.tsx  index.tsx
frontend/mobile/app/auth/: login.tsx  signup.tsx
frontend/mobile/components/: ui.tsx
frontend/mobile/constants/: colors.ts
frontend/mobile/engine/: zakatEngine.ts
frontend/mobile/ios/: Podfile
frontend/mobile/lib/: api.ts
frontend/mobile/store/: zakatStore.ts
frontend/src/lib/: api.ts
supabase/migrations/: 001_initial_schema.sql  002_notifications.sql  003_zakat_payments.sql
(+13 files in other folders)
